tests/tests/snapshots/host_syntax_identity__identity_stmt__extras-verbs__CallUpstream.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (http-call (field-access payload path) (field-access payload payload)))
(return true)
