tests/tests/snapshots/host_syntax_identity__identity_stmt__extras-verbs__EvictCache.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (cache-delete (field-access payload key)))
(return true)
