tests/tests/snapshots/host_syntax_identity__identity_stmt__extras-verbs__RemoveDoc.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (object-store-delete (field-access payload key)))
(return true)
