tests/tests/snapshots/host_syntax_identity__identity_stmt__extras-verbs__SearchDocs.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (search-query (field-access payload query)))
(return true)
